test/CheckError/Struct/OpaqueStructMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

struct OpaqueStruct;

void f(OpaqueStruct* ptr) {
	// CHECK: .loci:9:16: error: template arguments do not satisfy require predicate 'OpaqueStruct : movable_t' of method 'move'
	// CHECK: .loci:9:16: note: because: method '__alignmask' not found
	unused_result move *ptr;
}

// CHECK: 1 error generated.
